<resources>

    <string name="app_name">SmartHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 主界面 -->
    <string name="main_btn_lifecontent">生活情境</string>
    <string name="main_btn_roomctrl">房间控制</string>
    <string name="main_btn_eleclass">电器分类</string>
    <string name="main_btn_add">添加+</string>
    <string name="main_btn_add_socket">添加电源换插座</string>
    <string name="main_btn_address_device">客厅： 电视</string>
    <string name="main_tv_time">2012/9/6 23:23</string>
    <string name="main_tv_message">消息提示</string>
    <string name="main_null">" "</string>
    <string name="main_btn_back">返  回</string>
    <string name="main_btn_confirm">确  认</string>
    <string name="main_btn_room">房间：客厅</string>
    <string name="main_btn_sure">确  定</string>
    <string name="main_btn_cancel">取  消</string>
    <string name="main_btn_search">搜  索</string>
    <string name="main_btn_save">保  存</string>

    <!-- 常用 -->
    <string name="common_learn">学  习</string>
    <string name="common_control">控  制</string>
    <string name="common_on">打  开</string>
    <string name="common_off">关  闭</string>
    <string name="common_pause">暂  停</string>

    <!-- 账户设置 -->
    <string name="settings_account">账户设置</string>
    <string name="settings_old_pwd">旧密码</string>
    <string name="settings_new_pwd">新密码</string>
    <string name="settings_confirm_pwd">确认密码</string>
    <string name="settings_authority">权限设置</string>
    <string name="settings_edit">编  辑</string>
    <string name="settings_delete">删  除</string>
    <string name="setting_add">添  加</string>
    <string name="setting_prompt">*权限编辑即管理员可以设置密码，仅在执行以上打钩动作时需要密码完成</string>
    <string name="settings_save_current">保存当前设置</string>
    <string name="settings_save">保  存</string>
    <string name="settings_recover_factory">恢复出厂设置</string>
    <string name="settings_recover">恢  复</string>
    <string name="settings_recover_save">恢复保存版本</string>

    <!-- 消息提示 -->
    <string name="message_type">1.警报</string>
    <string name="message_address">客厅门磁警报</string>
    <string name="message_level">级别：高</string>
    <string name="message_time">2012/11/6 10:11</string>
    <string name="message_start_time">开始时间</string>
    <string name="message_end_time">结束时间</string>

    <!-- 情景 -->
    <string name="scene_title">情景： 全关</string>
    <string name="scene_add_other_device">智能联动+</string>
    <string name="scene_address">客  厅</string>
    <string name="scene_device">设  备</string>
    <string name="scene_delay">延时  10秒</string>
    <string name="scene_statu">冷冻室温度 -10°C</string>
    <string name="scene_condition">条  件</string>
    <string name="scene_result">结  果</string>

    <!-- 电视 -->
    <string name="tv_up">上</string>
    <string name="tv_down">下</string>
    <string name="tv_left">左</string>
    <string name="tv_right">右</string>
    <string name="tv_ok">OK</string>

    <!-- 窗帘 -->
    <string name="curtain_title">客厅：窗帘</string>
    <string name="curtain_this">窗帘</string>
    <string name="curtain_power">窗帘电源</string>
    <!-- 电灯 -->
    <string name="light_name">电灯</string>
    <!-- 空调 -->
    <string name="air_title">客厅：空调</string>

    <!-- Dialog -->
    <string name="dialog_set_title">请设置智能联动名称</string>
    <string name="dialog_save_add">保存并添加</string>
    <string name="dialog_pwd_title">请输入密码</string>
    <string name="dialog_version_title">请输入当前设置的名称</string>
    <string name="dialog_is_save">是否保存当前设置</string>
    <string name="dialog_save_succeed">XXX  设置保存成功</string>
    <string name="dialog_delay_title">延时</string>
    <string name="dialog_control_learn">请关闭开关或者调成学习状态下再添加</string>
    <string name="dialog_set_new">您还未设置任何东西，无法新建，是否继续</string>

    <!-- 添加一级分类 -->
    <string name="add_classify_general">普通单个设备</string>
    <string name="add_classify_auto">自动情景设备</string>
    <string name="add_classify_default">缺省按钮</string>
    <!-- 长按选项 -->
    <string name="rename_title">重命名</string>
    <string name="change_color">选择文件夹</string>
    <!-- 房间添加页面 -->
    <string name="choice_ele_name">选择电器名称</string>
    <!-- progressbardialog -->
    <string name="progress_title">正在初始化数据...</string>
    <string name="ele_not_learn">您还没有学习，先点击按钮学习</string>
    <string name="ele_has_learn">您已经学习完毕！</string>
    <string name="ele_learn">已学习过</string>
    <string name="add_ele_name">电器名称</string>
    <string name="add_ele_name_toast">电器名称重复</string>
    <!-- 情景添加电器 -->
    <string name="addnewdevice_txt_commondevice">普通单个设备</string>
    <string name="addnewdevice_txt_autodevice">自动情景设备</string>
    <string name="addnewdevice_txt_defaultbtn">缺省按钮</string>

</resources>