<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<!-- Top -->

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<Button style="@style/main_style" android:text="@string/settings_account" />

		<TextView android:id="@+id/main_tv_time" style="@style/main_style"
			android:text="@string/main_tv_time" />

		<Button style="@style/main_style" />
	</LinearLayout>

	<!-- Content -->

	<include layout="@layout/main_viewpager" />

	<!-- Bottom -->

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<Button android:id="@+id/main_btn_back" style="@style/main_style"
			android:text="@string/main_btn_back" />

		<TextView android:id="@+id/main_tv_message" style="@style/main_style"
			android:text="@string/main_tv_message" />

		<Button android:id="@+id/main_btn_confirm" style="@style/main_style"
			android:text="@string/main_btn_confirm" />
	</LinearLayout>

</LinearLayout>