<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btn_save"
            style="@style/main_style"
            android:text="@string/main_btn_save" />

        <TextView
            android:id="@+id/main_tv_time"
            style="@style/main_style"
            android:text="@string/main_tv_time" />

        <Button
            android:id="@+id/scene_btn_roomctrl"
            style="@style/main_style"
            android:focusable="false"
            android:text="@string/scene_add_other_device" />
    </LinearLayout>

    <!-- Content -->

    <include layout="@layout/scene_new_item" />

    <!-- Bottom -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scene_btn_back"
            style="@style/main_style"
            android:text="@string/main_btn_back" />

        <TextView
            android:id="@+id/main_tv_message"
            style="@style/main_style"
            android:text="@string/main_tv_message" />

        <Button
            android:id="@+id/scene_btn_add"
            style="@style/main_style"
            android:text="@string/main_btn_add" />
    </LinearLayout>

</LinearLayout>