<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scene_ll_drag"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scene_btn_name"
            style="@style/main_style"
            android:background="@drawable/left_up"
            android:focusable="false"
            android:text="@string/scene_title" />

        <TextView
            android:id="@+id/main_tv_time"
            style="@style/main_style"
            android:text="@string/main_tv_time" />

        <Button
            android:id="@+id/scene_btn_auto"
            style="@style/main_style"
            android:text="@string/scene_add_other_device" />
    </LinearLayout>

    <!-- Content com.eastedge.smarthome.DragListView -->

    <com.eastedge.smarthome.dragview.DragListView
        android:id="@+id/scene_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <!-- Bottom -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scene_btn_back"
            style="@style/main_style"
            android:text="@string/main_btn_back" />

        <TextView
            android:id="@+id/main_tv_message"
            style="@style/main_style"
            android:text="@string/main_tv_message" />

        <Button
            android:id="@+id/scene_btn_add"
            style="@style/main_style"
            android:text="@string/main_btn_add" />
    </LinearLayout>

</LinearLayout>