<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/dialog_tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_pwd_title"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/dialog_et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="8"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_btn_confirm"
                style="@style/dialog_btn_style"
                android:text="@string/main_btn_confirm" />

            <Button
                android:id="@+id/dialog_btn_cancel"
                style="@style/dialog_btn_style"
                android:text="@string/main_btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>