<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:id="@+id/time_pick_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/message_start_time" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/start_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/start_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/start_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_pick_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/message_end_time" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/end_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/end_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.eastedge.smarthome.wheelview.WheelView
            android:id="@+id/end_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/search_btn_confirm"
            style="@style/dialog_btn_style"
            android:text="@string/main_btn_confirm" />

        <Button
            android:id="@+id/search_btn_cancel"
            style="@style/dialog_btn_style"
            android:text="@string/main_btn_cancel" />
    </LinearLayout>

</LinearLayout>